--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
       box-shadow: 0 2px 8px rgba(0,0,0,0.1); max-width: 1300px; margin: 0 auto;
     }
     h1 { margin-top: 0; }
-    .upload-box { margin-bottom: 20px; }
-    input[type=file] { padding: 6px; }
     .filters { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 12px 16px; }
     .filter-group { display: flex; flex-direction: column; gap: 4px; }
     label { font-weight: 600; }
@@ -32,10 +30,8 @@
 <body>
   <div class="app">
     <h1>Rawls Faculty Publications Database</h1>
-    <div class="upload-box">
-      <label><b>Upload Excel file:</b></label>
-      <input type="file" id="fileInput" accept=".xlsx, .xls">
-    </div>
+
+    <!-- Upload removed; everything loads automatically from database.xlsx -->
 
     <div class="filters">
       <div class="filter-group">
@@ -52,36 +48,35 @@
       </div>
 
       <div class="filter-group">
-  <label for="areaSelect">Area</label>
-  <select id="areaSelect">
-    <option value="">All Areas</option>
-    <option value="School of Accounting">School of Accounting</option>
-    <option value="Accounting">Accounting</option>
-    <option value="Energy Commerce &">Energy Commerce &</option>
-    <option value="Finance">Finance</option>
-    <option value="Information Systems &">Information Systems & Quantitative Sciences (ISQS)</option>
-    <option value="Management">Management</option>
-    <option value="Marketing and Supply Chain">Marketing and Supply Chain</option>
-    <option value="Other">Other</option>
-  </select>
-</div>
+        <label for="areaSelect">Area</label>
+        <select id="areaSelect">
+          <option value="">All Areas</option>
+          <option value="School of Accounting">School of Accounting</option>
+          <option value="Accounting">Accounting</option>
+          <option value="Energy Commerce &">Energy Commerce &</option>
+          <option value="Finance">Finance</option>
+          <option value="Information Systems &">Information Systems & Quantitative Sciences (ISQS)</option>
+          <option value="Management">Management</option>
+          <option value="Marketing and Supply Chain">Marketing and Supply Chain</option>
+          <option value="Other">Other</option>
+        </select>
+      </div>
 
-     <div class="filter-group">
-  <label for="positionSelect">Position</label>
-  <select id="positionSelect">
-    <option value="">All Positions</option>
-    <option value="Assistant Professor">Assistant Professor</option>
-    <option value="Associate Professor">Associate Professor</option>
-    <option value="Clinical Faculty">Clinical Faculty</option>
-    <option value="Distinguished Professor">Distinguished Professor</option>
-    <option value="Endowed Professor">Endowed Professor</option>
-    <option value="Faculty">Faculty</option>
-    <option value="Lecturer">Lecturer</option>
-    <option value="Professor">Professor</option>
-    <option value="Staff">Staff</option>
-  </select>
-</div>
-
+      <div class="filter-group">
+        <label for="positionSelect">Position</label>
+        <select id="positionSelect">
+          <option value="">All Positions</option>
+          <option value="Assistant Professor">Assistant Professor</option>
+          <option value="Associate Professor">Associate Professor</option>
+          <option value="Clinical Faculty">Clinical Faculty</option>
+          <option value="Distinguished Professor">Distinguished Professor</option>
+          <option value="Endowed Professor">Endowed Professor</option>
+          <option value="Faculty">Faculty</option>
+          <option value="Lecturer">Lecturer</option>
+          <option value="Professor">Professor</option>
+          <option value="Staff">Staff</option>
+        </select>
+      </div>
 
       <div class="filter-group">
         <label>Year</label>
@@ -95,6 +90,7 @@
           <label><input type="checkbox" id="utdNo"> No</label>
         </div>
       </div>
+
       <div class="filter-group">
         <label>Financial Times Journal</label>
         <div class="checkbox-group">
@@ -102,6 +98,7 @@
           <label><input type="checkbox" id="ftNo"> No</label>
         </div>
       </div>
+
       <div class="filter-group">
         <label>Ranking</label>
         <div class="checkbox-group">
@@ -152,45 +149,73 @@
       resultsCount: document.getElementById("resultsCount"),
     };
 
-    document.getElementById("fileInput").addEventListener("change", handleFile);
+    // NEW: auto-load database.xlsx from same repo
+    document.addEventListener("DOMContentLoaded", () => {
+      loadWorkbookFromServer();
+      attachListeners();
+    });
 
-    function handleFile(e) {
-      const file = e.target.files[0];
-      if (!file) return;
+    function loadWorkbookFromServer() {
+      // If database.xlsx is in a subfolder, adjust the path (e.g., "./data/database.xlsx")
+      fetch("database.xlsx")
+        .then(res => {
+          if (!res.ok) throw new Error("Failed to load database.xlsx");
+          return res.arrayBuffer();
+        })
+        .then(buf => {
+          const workbook = XLSX.read(buf, { type: "array" });
 
-      const reader = new FileReader();
-      reader.onload = function (event) {
-        const workbook = XLSX.read(event.target.result, { type: "binary" });
-        const sheetName = workbook.SheetNames[0];
-        const sheet = workbook.Sheets[sheetName];
-        const json = XLSX.utils.sheet_to_json(sheet);
-        data = json.map(row => ({
-          personName: row.Personname || "",
-          position: row.Position || "",
-          area: row.Area || "",
-          year: row.year || "",
-          articleTitle: row.articletitle || "",
-          journalName: row.journalname || "",
-          ranking: row["Ranking - Updated"] || "",
-          utdJournal: row["UTD Journal"] || "",
-          ftJournal: row["Financial Times Journal"] || "",
-        }));
-        populateDropdowns();
-        renderTable(data);
-        attachListeners();
-      };
-      reader.readAsBinaryString(file);
+          // Try to find sheet named "Tab 10", otherwise use 10th sheet, else first
+          let sheetName =
+            workbook.SheetNames.find(
+              name => name.trim().toLowerCase() === "tab 10"
+            ) ||
+            workbook.SheetNames[9] || // 10th tab (index 9)
+            workbook.SheetNames[0];
+
+          const sheet = workbook.Sheets[sheetName];
+          const json = XLSX.utils.sheet_to_json(sheet, { defval: "" });
+
+          data = json.map(row => ({
+            personName: row.Personname || "",
+            position: row.Position || "",
+            area: row.Area || "",
+            year: row.year || "",
+            articleTitle: row.articletitle || "",
+            journalName: row.journalname || "",
+            ranking: row["Ranking - Updated"] || "",
+            utdJournal: row["UTD Journal"] || "",
+            ftJournal: row["Financial Times Journal"] || "",
+          }));
+
+          populateDropdowns();
+          renderTable(data);
+        })
+        .catch(err => {
+          console.error(err);
+          elements.resultsCount.textContent =
+            "Error loading database.xlsx. Check console for details.";
+        });
     }
 
     function populateDropdowns() {
       const addOptions = (select, values) => {
+        const prevValue = select.value;
         select.innerHTML = "<option value=''>All</option>";
-        [...new Set(values.filter(v => v))].sort().forEach(v => {
-          const opt = document.createElement("option");
-          opt.value = v; opt.textContent = v;
-          select.appendChild(opt);
-        });
+        [...new Set(values.filter(v => v))]
+          .sort()
+          .forEach(v => {
+            const opt = document.createElement("option");
+            opt.value = v;
+            opt.textContent = v;
+            select.appendChild(opt);
+          });
+        // Try to keep previous selection if still valid
+        if ([...select.options].some(o => o.value === prevValue)) {
+          select.value = prevValue;
+        }
       };
+
       addOptions(elements.areaSelect, data.map(d => d.area));
       addOptions(elements.positionSelect, data.map(d => d.position));
       addOptions(elements.yearSelect, data.map(d => d.year));
@@ -235,9 +260,22 @@
         if (pos && d.position !== pos) return false;
         if (yr && String(d.year) !== String(yr)) return false;
 
-        if ((utdY || utdN) && !((utdY && d.utdJournal === "Yes") || (utdN && d.utdJournal === "No"))) return false;
-        if ((ftY || ftN) && !((ftY && d.ftJournal === "Yes") || (ftN && d.ftJournal === "No"))) return false;
-        if ((r4 || r5 || r5s) && !((r4 && d.ranking === "4") || (r5 && d.ranking === "5") || (r5s && d.ranking === "5*"))) return false;
+        if ((utdY || utdN) &&
+            !((utdY && d.utdJournal === "Yes") || (utdN && d.utdJournal === "No"))) {
+          return false;
+        }
+
+        if ((ftY || ftN) &&
+            !((ftY && d.ftJournal === "Yes") || (ftN && d.ftJournal === "No"))) {
+          return false;
+        }
+
+        if ((r4 || r5 || r5s) &&
+            !((r4 && d.ranking === "4") ||
+              (r5 && d.ranking === "5") ||
+              (r5s && d.ranking === "5*"))) {
+          return false;
+        }
 
         return true;
       });
@@ -256,3 +294,4 @@
   </script>
 </body>
 </html>
+
