--- a/index.html
+++ b/index.html
@@ -3,31 +3,212 @@
 <head>
   <meta charset="UTF-8" />
   <title>Rawls Faculty Publications Database</title>
+
+  <!-- Rawls / TTU-ish fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
   <style>
-    * { box-sizing: border-box; font-family: system-ui, sans-serif; }
-    body { background: #f5f5f5; margin: 0; padding: 20px; }
-    .app {
-      background: white; padding: 20px; border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1); max-width: 1300px; margin: 0 auto;
+    :root {
+      --rawls-red: #ba0c2f;          /* main Rawls red */
+      --rawls-red-dark: #8c001a;
+      --rawls-black: #1f1f1f;
+      --rawls-bg: #f5f5f5;
+      --rawls-card-bg: #ffffff;
+      --rawls-border: #e0e0e0;
     }
-    h1 { margin-top: 0; }
-    .filters { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 12px 16px; }
-    .filter-group { display: flex; flex-direction: column; gap: 4px; }
-    label { font-weight: 600; }
-    input[type=text], select { padding: 6px; border-radius: 4px; border: 1px solid #ccc; }
-    .checkbox-group { display: flex; gap: 10px; flex-wrap: wrap; font-size: 0.9rem; }
-    table { width: 100%; border-collapse: collapse; margin-top: 15px; font-size: 0.85rem; }
-    th, td { padding: 6px 8px; border-bottom: 1px solid #eee; text-align: left; }
-    th { background: #fafafa; position: sticky; top: 0; }
-    tr:nth-child(even) { background: #fcfcfc; }
-    .badge { display: inline-block; padding: 2px 6px; border-radius: 6px; font-size: 0.75rem; margin-right: 4px; }
-    .badge-blue { background: #e3f2fd; color: #1565c0; }
-    .badge-green { background: #e8f5e9; color: #2e7d32; }
-    .badge-gold { background: #fff8e1; color: #f57f17; }
+
+    * {
+      box-sizing: border-box;
+      font-family: "Roboto", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+    }
+
+    body {
+      margin: 0;
+      background: var(--rawls-bg);
+      color: var(--rawls-black);
+    }
+
+    /* Top black TTU-style bar */
+    .rawls-header {
+      background: #000;
+      color: #fff;
+      padding: 6px 24px;
+      font-size: 0.75rem;
+      letter-spacing: 0.12em;
+      text-transform: uppercase;
+    }
+
+    .rawls-header-inner {
+      max-width: 1320px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .rawls-header-brand {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .rawls-header-brand-main {
+      font-family: "Roboto Condensed", system-ui, sans-serif;
+      font-weight: 700;
+      font-size: 1.05rem;
+    }
+
+    .rawls-header-brand-sub {
+      font-size: 0.75rem;
+      opacity: 0.8;
+    }
+
+    /* Main card */
+    .app {
+      background: var(--rawls-card-bg);
+      padding: 24px;
+      margin: 24px auto;
+      border-radius: 12px;
+      max-width: 1320px;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
+      border-top: 4px solid var(--rawls-red);
+    }
+
+    h1 {
+      margin: 0 0 12px;
+      font-family: "Roboto Condensed", system-ui, sans-serif;
+      font-weight: 700;
+      font-size: 1.7rem;
+      letter-spacing: 0.03em;
+      color: var(--rawls-red);
+    }
+
+    .filters {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 12px 16px;
+      margin-top: 12px;
+    }
+
+    .filter-group {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
+
+    label {
+      font-weight: 600;
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+      color: #555;
+    }
+
+    input[type="text"],
+    select {
+      padding: 6px 8px;
+      border-radius: 6px;
+      border: 1px solid var(--rawls-border);
+      font-size: 0.85rem;
+      background: #fafafa;
+      transition: border-color 0.15s ease, box-shadow 0.15s ease, background 0.15s ease;
+    }
+
+    input[type="text"]:focus,
+    select:focus {
+      outline: none;
+      border-color: var(--rawls-red);
+      box-shadow: 0 0 0 2px rgba(186, 12, 47, 0.18);
+      background: #fff;
+    }
+
+    .checkbox-group {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      font-size: 0.85rem;
+      color: #444;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 16px;
+      font-size: 0.85rem;
+    }
+
+    th,
+    td {
+      padding: 8px 10px;
+      border-bottom: 1px solid #eee;
+      text-align: left;
+    }
+
+    th {
+      background: #fafafa;
+      position: sticky;
+      top: 0;
+      z-index: 1;
+      font-size: 0.75rem;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+      color: #444;
+    }
+
+    tr:nth-child(even) {
+      background: #fcfcfc;
+    }
+
+    tr:hover {
+      background: #f5f5ff;
+    }
+
+    #resultsCount {
+      margin-top: 15px;
+      font-weight: 500;
+      color: #444;
+    }
+
+    /* Badges */
+    .badge {
+      display: inline-block;
+      padding: 2px 8px;
+      border-radius: 999px;
+      font-size: 0.75rem;
+      font-weight: 600;
+      margin-right: 4px;
+      white-space: nowrap;
+    }
+
+    /* Ranking badge in Rawls red */
+    .badge-blue {
+      background: rgba(186, 12, 47, 0.06);
+      color: var(--rawls-red);
+      border: 1px solid rgba(186, 12, 47, 0.3);
+    }
+
+    /* Yes = green for both UTD & FT */
+    .badge-green,
+    .badge-gold {
+      background: #e8f5e9;
+      color: #2e7d32;
+      border: 1px solid rgba(46, 125, 50, 0.3);
+    }
   </style>
 </head>
+
 <body>
+  <header class="rawls-header">
+    <div class="rawls-header-inner">
+      <div class="rawls-header-brand">
+        <span class="rawls-header-brand-main">Rawls College of Business</span>
+        <span class="rawls-header-brand-sub">Faculty Publications</span>
+      </div>
+    </div>
+  </header>
   <div class="app">
     <h1>Rawls Faculty Publications Database</h1>
 
