Update logo source in index.html

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
   <div class="rawls-header-inner">
     <img
   class="rawls-logo"
-  src="https://drive.google.com/uc?export=view&id=1cgDdX2gkfZyaQvgZLPniBieo8EBQKqfB"
+  src="RawlsRlogo.jpeg"
   alt="Rawls College of Business logo"
 >
  <div class="rawls-header-brand">
