--- a/index.html
+++ b/index.html
@@ -34,49 +34,56 @@
     }
 
     /* Top black TTU-style bar */
-   .rawls-logo {
-  height: 38px;          /* adjust this number to fine-tune */
-  width: auto;
-  margin-right: 14px;
-  object-fit: contain;
-  vertical-align: middle;
-  border-radius: 2px;     /* optional: subtle rounding */
+ /* --- TTU Rawls-style black header --- */
+.rawls-header {
+  background: linear-gradient(to right, #000 60%, #111 100%);                   /* solid black bar */
+  border-bottom: 4px solid #ba0c2f;      /* TTU red underline accent */
+  color: #fff;
+  padding: 10px 28px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+  position: sticky;                      /* keeps bar visible when scrolling */
+  top: 0;
+  z-index: 1000;
 }
 
 .rawls-header-inner {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 10px;
+  gap: 16px;
   max-width: 1320px;
   margin: 0 auto;
-  padding: 4px 0;
 }
 
+/* Logo sizing */
+.rawls-logo {
+  height: 46px;          /* perfect balance next to text */
+  width: auto;
+  object-fit: contain;
+}
 
-    .rawls-header-inner {
-      max-width: 1320px;
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
+/* Branding text */
+.rawls-header-brand {
+  display: flex;
+  flex-direction: column;
+  line-height: 1.25;
+}
 
-    .rawls-header-brand {
-      display: flex;
-      flex-direction: column;
-    }
+.rawls-header-brand-main {
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 700;
+  font-size: 1.2rem;
+  color: #fff;
+  letter-spacing: 0.02em;
+}
 
-    .rawls-header-brand-main {
-      font-family: "Roboto Condensed", system-ui, sans-serif;
-      font-weight: 700;
-      font-size: 1.05rem;
-    }
+.rawls-header-brand-sub {
+  font-size: 0.85rem;
+  color: #ccc;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+}
 
-    .rawls-header-brand-sub {
-      font-size: 0.75rem;
-      opacity: 0.8;
-    }
 
     /* Main card */
     .app {
@@ -299,17 +306,16 @@
 <body>
   <header class="rawls-header">
   <div class="rawls-header-inner">
-    <img
-  class="rawls-logo"
-  src="RawlsRlogo.jpeg"
-  alt="Rawls College of Business logo"
->
- <div class="rawls-header-brand">
+    <img class="rawls-logo" src="RawlsRlogo.jpeg" alt="Rawls College of Business logo">
+    <div class="rawls-header-brand">
       <span class="rawls-header-brand-main">Rawls College of Business</span>
-      <span class="rawls-header-brand-sub">Texas Tech University &middot; Faculty Publications</span>
+      <span class="rawls-header-brand-sub">
+        Texas Tech University · Rawls College Research
+      </span>
     </div>
   </div>
 </header>
+
 
 
   <div class="app">
