Add styling for footer section in index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
   text-transform: uppercase;
 }
 /* --- Footer Section --- */
+ 
 .rawls-footer {
+  margin: 0;
+  flex-shrink: 0; 
   background: #000;
   border-top: 4px solid #ba0c2f;
   color: #f0f0f0;
