Update filter labels and placeholders in index.html

--- a/index.html
+++ b/index.html
@@ -390,16 +390,16 @@ th:nth-child(3), td:nth-child(3) { width: 160px; } /* Area */
 
     <div class="filters">
       <div class="filter-group">
-        <label>Person Name</label>
-        <input type="text" id="personSearch" placeholder="Search person">
+        <label>Author's Name</label>
+        <input type="text" id="personSearch" placeholder="Search by Author">
       </div>
       <div class="filter-group">
         <label>Article Title</label>
-        <input type="text" id="titleSearch" placeholder="Search title">
+        <input type="text" id="titleSearch" placeholder="Search by title">
       </div>
       <div class="filter-group">
         <label>Journal Name</label>
-        <input type="text" id="journalSearch" placeholder="Search journal">
+        <input type="text" id="journalSearch" placeholder="Search by journal">
       </div>
 
       <div class="filter-group">
