Refactor table container styles for consistency

--- a/index.html
+++ b/index.html
@@ -335,11 +335,13 @@ tr:hover {
 }
 /* Optional: cleaner border + shadow for the table wrapper */
 .table-container {
-  border-radius: 12px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  box-shadow: 0 2px 16px rgba(0,0,0,0.05);
   overflow: hidden;
   border: 1px solid #e0e0e0;
+  background: #fff;
 }
+
 
     tr:nth-child(even) {
       background: #fcfcfc;
@@ -498,7 +500,7 @@ tr:hover {
       </div>
     </div>
 
-    <div class="table-container" style="overflow:auto; max-height:500px;">
+<div class="table-container" style="overflow:auto; max-height:500px;">
   <table> ... </table>
 </div>
 
