Rename 'Ranking' to 'Rawls Journal List Rankings'

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         <th>Year</th>
         <th>Article Title</th>
         <th>Journal</th>
-        <th>Ranking</th>
+        <th>Rawls Journal List Rankings</th>
         <th>UTD</th>
         <th>Financial Times</th>
       </tr>
@@ -522,7 +522,7 @@
       "year",
       "articletitle",
       "journalname",
-      "ranking - updated",
+      "Rawls Journal List Rankings",
       "utd journal",
       "financial times journal",
     ];
