--- a/index.html
+++ b/index.html
@@ -258,6 +258,25 @@
       color: #444;
     }
 
+    /* New: name inputs row + exact match checkbox */
+    .name-inputs {
+      display: flex;
+      gap: 8px;
+    }
+
+    .name-inputs input[type="text"] {
+      flex: 1;
+    }
+
+    .name-exact {
+      font-size: 0.8rem;
+      color: #555;
+      margin-top: 2px;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+
     /* --- Custom multi-select dropdown with checkboxes --- */
     .multi-select {
       position: relative;
@@ -457,9 +476,17 @@
   </div>
 
   <div class="filters">
+    <!-- UPDATED: Author Name split into Last / First + Exact match -->
     <div class="filter-group">
-      <label>Author's Name</label>
-      <input type="text" id="personSearch" placeholder="Search by Author">
+      <label>Author Name</label>
+      <div class="name-inputs">
+        <input type="text" id="lastNameSearch" placeholder="Last name (e.g., Yan)">
+        <input type="text" id="firstNameSearch" placeholder="First name (e.g., Tingting)">
+      </div>
+      <label class="name-exact">
+        <input type="checkbox" id="matchExactName">
+        Match entire cell contents
+      </label>
     </div>
 
     <div class="filter-group">
@@ -527,19 +554,22 @@
 
   <div class="table-container">
     <table>
-      <thead>
-      <tr>
-        <th>Person</th>
-        <th>Position</th>
-        <th>Area</th>
-        <th>Year</th>
-        <th>Article Title</th>
-        <th>Journal</th>
-        <th>Ranking</th>
-        <th>UTD</th>
-        <th>Financial Times</th>
-      </tr>
-      </thead>
+     <thead>
+  <tr>
+    <th>Person</th>
+    <th>Last Name</th>
+    <th>First Name</th>
+    <th>Position</th>
+    <th>Area</th>
+    <th>Year</th>
+    <th>Article Title</th>
+    <th>Journal</th>
+    <th>Ranking</th>
+    <th>UTD</th>
+    <th>Financial Times</th>
+  </tr>
+</thead>
+
       <tbody id="resultsBody"></tbody>
     </table>
   </div>
@@ -550,7 +580,9 @@
   let currentRows = [];
 
   const elements = {
-    personSearch: document.getElementById("personSearch"),
+    lastNameSearch: document.getElementById("lastNameSearch"),
+    firstNameSearch: document.getElementById("firstNameSearch"),
+    matchExactName: document.getElementById("matchExactName"),
     titleSearch: document.getElementById("titleSearch"),
     journalSearch: document.getElementById("journalSearch"),
     utdYes: document.getElementById("utdYes"),
@@ -581,7 +613,7 @@
 
   function findSheetWithHeaders(workbook) {
     const targetHeaders = [
-      "personname",
+      // kept simple; will still fall back to first sheet if these don't all match
       "position",
       "area",
       "year",
@@ -638,8 +670,14 @@
 
         data = json.map(row => {
           const r = normalizeRow(row);
+          const first = r["firstname"] || "";
+          const last = r["lastname"] || "";
+          const personName = [last, first].filter(Boolean).join(", ");
+
           return {
-            personName: r["personname"] || "",
+            firstName: first,
+            lastName: last,
+            personName: personName,
             position: r["position"] || "",
             area: r["area"] || "",
             year: r["year"] || "",
@@ -759,31 +797,34 @@
 
   /* -------- Table + Export ---------- */
 
-  function renderTable(rows) {
-    currentRows = rows.slice();
+ function renderTable(rows) {
+  currentRows = rows.slice();
 
-    elements.resultsBody.innerHTML = "";
-    rows.forEach(r => {
-      const tr = document.createElement("tr");
-      tr.innerHTML = `
-        <td>${r.personName}</td>
-        <td>${r.position || ""}</td>
-        <td>${r.area || ""}</td>
-        <td>${r.year}</td>
-        <td>${r.articleTitle}</td>
-        <td>${r.journalName}</td>
-        <td>${r.ranking ? `<span class="badge badge-blue">${r.ranking}</span>` : ""}</td>
-        <td>${r.utdJournal === "Yes"
-          ? `<span class="badge badge-green">Yes</span>`
-          : (r.utdJournal === "No" ? `<span class="badge badge-no">No</span>` : "")}</td>
-        <td>${r.ftJournal === "Yes"
-          ? `<span class="badge badge-green">Yes</span>`
-          : (r.ftJournal === "No" ? `<span class="badge badge-no">No</span>` : "")}</td>
-      `;
-      elements.resultsBody.appendChild(tr);
-    });
-    elements.resultsCount.textContent = `Showing ${rows.length} results`;
-  }
+  elements.resultsBody.innerHTML = "";
+  rows.forEach(r => {
+    const tr = document.createElement("tr");
+    tr.innerHTML = `
+      <td>${r.personName}</td>
+      <td>${r.lastName || ""}</td>
+      <td>${r.firstName || ""}</td>
+      <td>${r.position || ""}</td>
+      <td>${r.area || ""}</td>
+      <td>${r.year}</td>
+      <td>${r.articleTitle}</td>
+      <td>${r.journalName}</td>
+      <td>${r.ranking ? `<span class="badge badge-blue">${r.ranking}</span>` : ""}</td>
+      <td>${r.utdJournal === "Yes"
+        ? `<span class="badge badge-green">Yes</span>`
+        : (r.utdJournal === "No" ? `<span class="badge badge-no">No</span>` : "")}</td>
+      <td>${r.ftJournal === "Yes"
+        ? `<span class="badge badge-green">Yes</span>`
+        : (r.ftJournal === "No" ? `<span class="badge badge-no">No</span>` : "")}</td>
+    `;
+    elements.resultsBody.appendChild(tr);
+  });
+  elements.resultsCount.textContent = `Showing ${rows.length} results`;
+}
+
 
   function exportFilteredToExcel() {
     if (!currentRows || currentRows.length === 0) {
@@ -793,6 +834,8 @@
 
     const exportData = currentRows.map(r => ({
       "Person": r.personName,
+      "First Name": r.firstName,
+      "Last Name": r.lastName,
       "Position": r.position,
       "Area": r.area,
       "Year": r.year,
@@ -813,7 +856,10 @@
   /* -------- Filtering ---------- */
 
   function applyFilters() {
-    const pq = elements.personSearch.value.toLowerCase();
+    const lnq = elements.lastNameSearch.value.trim().toLowerCase();
+    const fnq = elements.firstNameSearch.value.trim().toLowerCase();
+    const matchExact = elements.matchExactName.checked;
+
     const tq = elements.titleSearch.value.toLowerCase();
     const jq = elements.journalSearch.value.toLowerCase();
 
@@ -826,24 +872,40 @@
     const r4 = elements.rank4.checked, r5 = elements.rank5.checked, r5s = elements.rank5star.checked;
 
     const filtered = data.filter(d => {
-      if (pq && !d.personName.toLowerCase().includes(pq)) return false;
+      // Last name filter
+      if (lnq) {
+        const ln = (d.lastName || "").toLowerCase();
+        if (matchExact ? (ln !== lnq) : !ln.includes(lnq)) return false;
+      }
+
+      // First name filter
+      if (fnq) {
+        const fn = (d.firstName || "").toLowerCase();
+        if (matchExact ? (fn !== fnq) : !fn.includes(fnq)) return false;
+      }
+
+      // Title / journal filters
       if (tq && !d.articleTitle.toLowerCase().includes(tq)) return false;
       if (jq && !d.journalName.toLowerCase().includes(jq)) return false;
 
+      // Area / Position / Year multiselects
       if (areaVals.length && !areaVals.includes(d.area)) return false;
       if (posVals.length && !posVals.includes(d.position)) return false;
       if (yearVals.length && !yearVals.includes(String(d.year))) return false;
 
+      // UTD filter
       if ((utdY || utdN) &&
           !((utdY && d.utdJournal === "Yes") || (utdN && d.utdJournal === "No"))) {
         return false;
       }
 
+      // FT filter
       if ((ftY || ftN) &&
           !((ftY && d.ftJournal === "Yes") || (ftN && d.ftJournal === "No"))) {
         return false;
       }
 
+      // Ranking filter
       if ((r4 || r5 || r5s) &&
           !((r4 && d.ranking === "4") ||
             (r5 && d.ranking === "5") ||
@@ -858,7 +920,10 @@
   }
 
   function clearAllFilters() {
-    elements.personSearch.value = "";
+    elements.lastNameSearch.value = "";
+    elements.firstNameSearch.value = "";
+    elements.matchExactName.checked = false;
+
     elements.titleSearch.value = "";
     elements.journalSearch.value = "";
 
@@ -879,7 +944,9 @@
 
   function attachListeners() {
     [
-      elements.personSearch,
+      elements.lastNameSearch,
+      elements.firstNameSearch,
+      elements.matchExactName,
       elements.titleSearch,
       elements.journalSearch,
       elements.utdYes,
@@ -918,5 +985,4 @@
 
 </body>
 </html>
-
 
